force-app/main/default/objects/Restaurant_Slot__c/Restaurant_Slot__c.object-meta.xml
<CustomObject>
    <label>Restaurant Slot</label>
    <pluralLabel>Restaurant Slots</pluralLabel>
    <nameField>
        <label>Slot Number</label>
        <type>AutoNumber</type>
        <displayFormat>SLOT-{00000}</displayFormat>
        <startingNumber>1</startingNumber>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>