force-app/main/default/objects/Restaurant_Slot__c/fields/Slot_Start_Time__c.field-meta.xml
<CustomField>
    <fullName>Slot_Start_Time__c</fullName>
    <label>Slot Start Time</label>
    <type>DateTime</type>
    <required>true</required>
</CustomField>