force-app/main/default/objects/Restaurant_Slot__c/fields/Table__c.field-meta.xml
<CustomField>
    <fullName>Table__c</fullName>
    <label>Table</label>
    <type>Lookup</type>
    <referenceTo>Restaurant_Table__c</referenceTo>
    <relationshipName>Restaurant_Slots</relationshipName>
    <relationshipLabel>Restaurant Slots</relationshipLabel>
    <deleteConstraint>Restrict</deleteConstraint>
    <required>true</required>
</CustomField>